--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,16 +10,19 @@ jobs:
 
         steps:
         - uses: actions/checkout@v2
-        - name: Set up Python 3.10
+        - name: Set up Python  3.12.1
           uses: actions/setup-python@v1
           with:
-             python-version: 3.10
+             python-version:  3.12.1
         - name: Install dependencies
           run: |
             make install
         - name: Lint with pylint
           run: |
             make lint
+        - name: Format with black
+          run: |
+            make format     
         - name: Test with pytest
           run: |
             make test   
